--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\FADELCO\\miniconda3\\envs\\demo-nigelec\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "<frozen importlib.util>:262: DeprecationWarning: The `openvino.runtime` module is deprecated and will be removed in the 2026.0 release. Please replace `openvino.runtime` with `openvino`.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Imports\n",
     "from llmsql.config import Arguments, SettingsManager, Settings\n",
@@ -25,16 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db = Database(db_name=\"dvdrental\",user_name=\"postgres\",pwd=\"841148\",host=\"localhost\",port=5432)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -46,80 +27,22 @@
     }
    ],
    "source": [
+    "db = Database(db_name=\"dvdrental\",user_name=\"postgres\",pwd=\"****\",host=\"localhost\",port=5432)\n",
     "sql_database = db.get_sql_db()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['__class__',\n",
-       " '__delattr__',\n",
-       " '__dict__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattribute__',\n",
-       " '__getstate__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__init_subclass__',\n",
-       " '__le__',\n",
-       " '__lt__',\n",
-       " '__module__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__setattr__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " '__weakref__',\n",
-       " '_all_tables',\n",
-       " '_custom_table_info',\n",
-       " '_engine',\n",
-       " '_ignore_tables',\n",
-       " '_include_tables',\n",
-       " '_indexes_in_table_info',\n",
-       " '_inspector',\n",
-       " '_max_string_length',\n",
-       " '_metadata',\n",
-       " '_sample_rows_in_table_info',\n",
-       " '_schema',\n",
-       " '_usable_tables',\n",
-       " 'dialect',\n",
-       " 'engine',\n",
-       " 'from_uri',\n",
-       " 'get_single_table_info',\n",
-       " 'get_table_columns',\n",
-       " 'get_usable_table_names',\n",
-       " 'insert_into_table',\n",
-       " 'metadata_obj',\n",
-       " 'run_sql',\n",
-       " 'truncate_word']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dir(sql_database)"
+    "# dir(sql_database)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +65,7 @@
        " 'store']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,13 +87,13 @@
     "# Set llm\n",
     "args = Arguments()\n",
     "\n",
-    "args.llm_type = 'gemini'\n",
-    "args.llm_name = 'models/gemini-1.5-flash'\n",
+    "args.llm_type = 'ollama' # gemini ollama deepseek\n",
+    "args.llm_name = 'sqlcoder:latest' # 'deepseek-r1:7b' sqlcoder:latest 'qwen2.5:7b' 'smollm:latest' 'models/gemini-1.5-flash' 'deepseek-chat', 'deepseek-reasoner'\n",
     "args.temperature = 0.6\n",
-    "args.tokenizer_name = 'Qwen/Qwen2.5-7B-Instruct'\n",
+    "args.tokenizer_name = 'defog/sqlcoder-7b-2' # 'deepseek-ai/DeepSeek-R1' 'Qwen/Qwen2.5-7B-Instruct' 'defog/sqlcoder-7b-2'\n",
     "\n",
-    "args.context_window = 512\n",
-    "args.num_output = 2048\n",
+    "args.context_window = 8000\n",
+    "args.num_output = 512\n",
     "\n",
     "args.is_openvino_embed = True\n",
     "args.embed_model = r\"D:\\llm-sql\\models\\kalm_ov\"\n",
@@ -180,41 +103,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "callback_manager=<llama_index.core.callbacks.base.CallbackManager object at 0x00000254BE79DB10> system_prompt=None messages_to_prompt=<function messages_to_prompt at 0x00000254A66D4CC0> completion_to_prompt=<function default_completion_to_prompt at 0x00000254A679AA20> output_parser=None pydantic_program_mode=<PydanticProgramMode.DEFAULT: 'default'> query_wrapper_prompt=None model='models/gemini-1.5-flash' temperature=0.3 max_tokens=256 generate_kwargs={'system_prompt': None}\n",
+      "callback_manager=<llama_index.core.callbacks.base.CallbackManager object at 0x0000022480A2B590> system_prompt=None messages_to_prompt=<function messages_to_prompt at 0x000002238B0F4C20> completion_to_prompt=<function default_completion_to_prompt at 0x000002238B1BE980> output_parser=None pydantic_program_mode=<PydanticProgramMode.DEFAULT: 'default'> query_wrapper_prompt=None base_url='http://localhost:11434' model='sqlcoder:latest' temperature=0.6 context_window=8000 request_timeout=20000.0 prompt_key='prompt' json_mode=False additional_kwargs={} is_function_calling_model=True keep_alive=None\n",
       "\n",
-      "functools.partial(<bound method PreTrainedTokenizerBase.encode of Qwen2TokenizerFast(name_or_path='Qwen/Qwen2.5-7B-Instruct', vocab_size=151643, model_max_length=8000, is_fast=True, padding_side='right', truncation_side='right', special_tokens={'eos_token': '<|im_end|>', 'pad_token': '<|endoftext|>', 'additional_special_tokens': ['<|im_start|>', '<|im_end|>', '<|object_ref_start|>', '<|object_ref_end|>', '<|box_start|>', '<|box_end|>', '<|quad_start|>', '<|quad_end|>', '<|vision_start|>', '<|vision_end|>', '<|vision_pad|>', '<|image_pad|>', '<|video_pad|>']}, clean_up_tokenization_spaces=False),  added_tokens_decoder={\n",
-      "\t151643: AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
-      "\t151644: AddedToken(\"<|im_start|>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
-      "\t151645: AddedToken(\"<|im_end|>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
-      "\t151646: AddedToken(\"<|object_ref_start|>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
-      "\t151647: AddedToken(\"<|object_ref_end|>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
-      "\t151648: AddedToken(\"<|box_start|>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
-      "\t151649: AddedToken(\"<|box_end|>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
-      "\t151650: AddedToken(\"<|quad_start|>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
-      "\t151651: AddedToken(\"<|quad_end|>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
-      "\t151652: AddedToken(\"<|vision_start|>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
-      "\t151653: AddedToken(\"<|vision_end|>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
-      "\t151654: AddedToken(\"<|vision_pad|>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
-      "\t151655: AddedToken(\"<|image_pad|>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
-      "\t151656: AddedToken(\"<|video_pad|>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
-      "\t151657: AddedToken(\"<tool_call>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=False),\n",
-      "\t151658: AddedToken(\"</tool_call>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=False),\n",
-      "\t151659: AddedToken(\"<|fim_prefix|>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=False),\n",
-      "\t151660: AddedToken(\"<|fim_middle|>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=False),\n",
-      "\t151661: AddedToken(\"<|fim_suffix|>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=False),\n",
-      "\t151662: AddedToken(\"<|fim_pad|>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=False),\n",
-      "\t151663: AddedToken(\"<|repo_name|>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=False),\n",
-      "\t151664: AddedToken(\"<|file_sep|>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=False),\n",
+      "functools.partial(<bound method PreTrainedTokenizerBase.encode of CodeLlamaTokenizerFast(name_or_path='defog/sqlcoder-7b-2', vocab_size=32016, model_max_length=8000, is_fast=True, padding_side='left', truncation_side='right', special_tokens={'bos_token': '<s>', 'eos_token': '</s>', 'unk_token': '<unk>', 'additional_special_tokens': ['▁<PRE>', '▁<MID>', '▁<SUF>', '▁<EOT>', '▁<PRE>', '▁<MID>', '▁<SUF>', '▁<EOT>']}, clean_up_tokenization_spaces=False),  added_tokens_decoder={\n",
+      "\t0: AddedToken(\"<unk>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
+      "\t1: AddedToken(\"<s>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
+      "\t2: AddedToken(\"</s>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
+      "\t32007: AddedToken(\"▁<PRE>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
+      "\t32008: AddedToken(\"▁<SUF>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
+      "\t32009: AddedToken(\"▁<MID>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
+      "\t32010: AddedToken(\"▁<EOT>\", rstrip=False, lstrip=False, single_word=False, normalized=False, special=True),\n",
       "}>, add_special_tokens=False)\n",
       "\n",
-      "256\n",
+      "512\n",
       "\n",
       "8000\n",
       "\n"
@@ -229,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -241,6 +149,7 @@
     }
    ],
    "source": [
+    "# Build query engine\n",
     "db.build_query_engine(sql_database=sql_database,\n",
     "                      tables=sql_database.get_usable_table_names(),\n",
     "                      sql_table_schemas=None)"
@@ -248,45 +157,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = db.query_text(\"How many  unique actors are there?\")"
+    "response = db.query_text(\"How many unique actors are there?\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[NodeWithScore(node=TextNode(id_='b0ad2a0d-210d-4ae5-9369-8aced9f35ac4', embedding=None, metadata={'sql_query': 'SELECT COUNT(DISTINCT actor_id) FROM actor;', 'result': [(200,)], 'col_keys': ['count']}, excluded_embed_metadata_keys=['sql_query', 'result', 'col_keys'], excluded_llm_metadata_keys=['sql_query', 'result', 'col_keys'], relationships={}, metadata_template='{key}: {value}', metadata_separator='\\n', text='[(200,)]', mimetype='text/plain', start_char_idx=None, end_char_idx=None, metadata_seperator='\\n', text_template='{metadata_str}\\n\\n{content}'), score=None)]"
+       "'1000'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "response.source_nodes"
+    "str(response)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'SELECT COUNT(DISTINCT actor_id) FROM actor;'"
+       "'WITH actor_film AS (SELECT a.actor_id, f.film_id FROM actor a CROSS JOIN film f), film_count AS (SELECT actor_id, COUNT(film_id) AS number_of_films FROM actor_film GROUP BY actor_id) SELECT MAX(number_of_films) FROM film_count;'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
